@startuml

class Client

abstract class Strategy{
    + algorithm()
}

class ConcreteStrategy1{
    + algorithm()
}

class ConcreteStrategy2{
    + algorithm()
}

class ConcreteStrategy3{
    + algorithm()
}

ConcreteStrategy1 -up-|> Strategy
ConcreteStrategy2 -up-|> Strategy
ConcreteStrategy3 -up-|> Strategy

Client -right-> Strategy
@enduml
